# nes_for_narya

./: README.md
core/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
core/main/: CMakeLists.txt  main.cpp
core/main/audio/: audio_i2s.cpp  audio_i2s.h
core/main/emu/: emu_anemoia.cpp
core/main/emu/anemoia/: bus.cpp  ppu2C02.cpp
core/main/emu/anemoia/mappers/: mapper001.cpp
core/main/emu/nofrendo/: map004.c
core/main/include/: narya_diag.h  narya_pin_assign.h
core/main/menu/: rom_menu.cpp  rom_menu.h
doc/: apu-irq-investigation.md  mmc1-post-config-hang.md
hid/main/: CMakeLists.txt  core_reset.c  core_reset.h  main.c
hid/main/include/: hid_uart_proto.h  narya_pin_assign.h
hid/main/usb/: usb_gamepad.c
